# thumbnail_generator_gui

./: pyproject.toml
src/: thumbnail_generator_gui.spec
src/thumbnail_generator_gui/: __init__.py  cv_check.py  thumbnail_generator_gui.py  thumbnail_generator_gui.spec
